# proxnix

./: .env  .gitignore  CONTAINER_DEPLOYMENTS.md  Cargo.toml  LICENSE  MORPH_EVALUATION.md  NATIVE_NIXPKG_DEPLOYMENTS.md  NEXT_STEPS.md  README.md  base.nix  bootstrap-guest-secrets.sh  bootstrap.sh  chezmoi.nix  common.nix  configuration.nix  desiredState.md  electrobun-secrets-startup.md  etckeeper.nix  flake.nix  hookscript.sh  host-cleanup-checklist.md  install.sh  inventory.proxmox.ini  lxc_nix_wiki  mkdocs.yml  plan.md  proxmox.nix  proxmox.yaml  proxnix-create-lxc  proxnix-doctor  proxnix-publish  proxnix-secrets  proxnix-secrets-guest  proxnix-workstation-common.sh  pve-conf-to-nix.py  rust_migration_plan.md  task.md  uninstall.sh  user-native.yaml  user.yaml  (+1 more)
crates/proxnix-host/: Cargo.toml
crates/proxnix-host/src/: api.rs  authority.rs  common.rs  create_lxc.rs  ct.rs  flake_update.rs  gc.rs  main.rs  payload_stage.rs  podman_secrets.rs  pve_conf.rs  reconcile_phase.rs  secret_bundle.rs  template_bootstrap.rs
workstation/: .gitignore  README.md  flake.nix  pyproject.toml
workstation/apps/ProxnixManager/: Package.swift
workstation/apps/proxnix-manager-electrobun/: README.md  electrobun.config.ts  package.json  tsconfig.json
workstation/cli/: README.md  pyproject.toml
workstation/cli/legacy/: proxnix-workstation-common.sh
workstation/cli/tests/: test_doctor_cli.py  test_exercise_cli.py  test_manager_api.py  test_orb_site_cli.py  test_publish_cli.py  test_secret_provider.py  test_secrets_cli.py  test_ssh_ops.py  test_tui_core.py
workstation/manager/: README.md  electrobun.config.ts  package.json  tsconfig.json
workstation/manager/scripts/: postwrap-cli-runtime.sh
workstation/nix/modules/: proxnix-manager-web.nix  proxnix-workstation.nix
workstation/packaging/: package-common.sh  package-linux.sh  package-macos.sh  package-scripts.sh
workstation/src/proxnix_workstation/: __init__.py  cli.py  config.py  doctor_cli.py  errors.py  exercise_cli.py  keepass_agent.py  local_nixos_container_backend.py  manager_api.py  orb_exercise_cli.py  orb_site_cli.py  paths.py  publish_cli.py  resources.py  secret_provider.py  secret_provider_adapters.py  secrets_cli.py  site.py  sops_ops.py  ssh_ops.py  tui.py
workstation/tests/: test_doctor_cli.py  test_exercise_cli.py  test_manager_api.py  test_orb_exercise_cli.py  test_orb_site_cli.py  test_publish_cli.py  test_secret_provider.py  test_secrets_cli.py  test_ssh_ops.py
(+292 files in other folders)
